manifests/4.5/apache.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: publish-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - image: httpd:alpine
        name: httpd
        ports:
        - containerPort: 80
        volumeMounts:
        - name: contents
          mountPath: /usr/local/apache2/htdocs/httpd/
        - name: root-contents
          mountPath: /usr/local/apache2/htdocs/
      volumes:
      - name: contents
        configMap:
          name: httpd-html
      - name: root-contents
        configMap:
          name: httpd-html
