manifests/4.5/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: publish-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: public.ecr.aws/docker/library/nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: contents
          mountPath: /usr/share/nginx/html/nginx
      volumes:
      - name: contents
        configMap:
          name: nginx-html
