manifests/4.5/apache-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-clusterip
  namespace: publish-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: ClusterIP
