manifests/4.5/apache-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-nodeport
  namespace: publish-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: NodePort
