manifests/4.5/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  namespace: publish-app
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx-clusterip
          servicePort: 80
      - path: /httpd
        backend:
          serviceName: httpd-clusterip
          servicePort: 80
