manifests/4.5/ingress-weight.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  namespace: publish-app
  annotations:
    nginx.ingress.kubernetes.io/service-weight: |
      nginx-clusterip: 20, httpd-clusterip: 80
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-clusterip
          servicePort: 80
      - path: /
        backend:
          serviceName: httpd-clusterip
          servicePort: 80
