manifests/4.5/webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx-clusterip
          servicePort: 80
      - path: /httpd
        backend:
          serviceName: httpd-clusterip
          servicePort: 80
